# upload_spdx_to_corona

./: .coveragerc  .gitignore  Dockerfile  GITHUB_QUICK_START.md  Jenkinsfile  LICENSE  README.md  bes-traceability-spdx.json  conjur_client.py  cowboy_node-getobject_current.json  keys.example.json  pyproject.toml  pytest.ini  settings.json  setup_environment.sh  tedg-dev_beatBot_root.json  upload_spdx.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/upload-spdx/: README.md  action.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
docs/: CLEANUP_VERIFICATION.md  CODE_COVERAGE.md  GITHUB_ACTIONS_USAGE.md  GITHUB_NEXT_STEPS.md  GITHUB_SETUP.md  README.md  REFACTORING.md  RESTRUCTURE_SUMMARY.md  SECURITY.md  USAGE_GUIDE.md
src/: upload_spdx.py  upload_spdx_cli.py
src/upload_spdx/: __init__.py  __main__.py  api_client.py  config.py  exceptions.py
src/upload_spdx/managers/: __init__.py  image_manager.py  product_manager.py  release_manager.py  spdx_manager.py
test/: conftest.py  test_cli.py  test_main.py  test_upload_spdx.py
test/unit/: __init__.py  test_config.py
